Fixed Administration overflow

--- a/server/styles/styles.css
+++ b/server/styles/styles.css
@@ -878,6 +878,7 @@ section.reply button:hover {
   left: 100%;
   box-shadow: 0.375rem 0.375rem 0.375rem 0rem rgb(0 0 0 / 10%);
   transition: 0.7s;
+  z-index: 3;
 }
 
 .edit-dropdown>.dropdown-option {
@@ -1683,6 +1684,14 @@ textarea {
   color: var(--main-color);
 }
 
+
+@media screen and (max-width: 1576px){
+  #administration{
+    display: flex;
+    flex-direction: column; 
+  }
+  
+}
 
 @media screen and (max-width: 1200px) {
 
